# mailbox

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/agents/: documentation-reviewer.md
.claude/commands/: pre-pr-check.md
.claude/skills/branch/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: AGENTS.src.md  Architecture.md  KitAPI.md  Project_Structure.md  Python.md  README.md  Testing.md
flipmail/: __init__.py  __main__.py  cli.py  config.py  tags.py
flipmail/kit/: __init__.py  client.py
mailbox/: __main__.py  cli.py  config.py  tags.py
mailbox/kit/: __init__.py  client.py  errors.py
tests/: conftest.py  test_cli.py  test_client.py  test_tags.py
